src/test/deca/context/invalid/extension/acces-tab.deca
// Programme refusant l'accès à un élement d'un tableau avec 3 éléments

{
    int[2, 3, 4] tab;
    print(tab[1]);
}